--- a/Frontend/youRJube/src/app/channel-community/channel-community-display/channel-community-display.component.html
+++ b/Frontend/youRJube/src/app/channel-community/channel-community-display/channel-community-display.component.html
@@ -4,8 +4,13 @@
     </div>
 
     <div class="right">
-        <div class="name">
-            {{channel.name}}
+        <div class="top">
+            <div class="name">
+                {{channel.name}} 
+            </div>
+            <div class="date">
+                {{dateOutput}}
+            </div>
         </div>
         <div class="content">
             {{communityPost.content}}
