--- a/Frontend/youRJube/src/app/video-related/video-related.component.html
+++ b/Frontend/youRJube/src/app/video-related/video-related.component.html
@@ -23,8 +23,10 @@
             </div>
         </div>
 
-        <div class="center">
-            {{channel.name}}
+        <div class="center" *ngIf="channel">
+            <a href="channel/{{channel.id}}">
+                {{channel.name}}
+            </a>
         </div>
 
         <div class="bottom">
