--- a/Frontend/youRJube/src/app/app.component.scss
+++ b/Frontend/youRJube/src/app/app.component.scss
@@ -95,6 +95,7 @@
     }
 
     .notifications-dropdown{
+        position: relative;
 
         a{
             text-align: center;
@@ -105,13 +106,15 @@
         }
 
         .dropdown-content {
-            display: none;
+            // display: none;
             position: absolute;
-            left: 90vw;
             background-color: white;
+            left: -5vw;
             width: 10vw;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 2;
+            transition-duration: 0.3s;
+            visibility: hidden;
 
             a {
                 color: gray;
@@ -132,6 +135,8 @@
     }
 
     .settings-dropdown{
+        position: relative;
+
         a{
             text-align: center;
             cursor: pointer;
@@ -144,13 +149,15 @@
         }
 
         .dropdown-content {
-            display: none;
             position: absolute;
-            left: 80vw;
+            left: -10vw;
             background-color: white;
             width: 15vw;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 2;
+            opacity: 0;
+            transition-duration: 0.3s;
+            visibility: hidden;
 
             a {
                 color: gray;
@@ -206,6 +213,7 @@
 
     .user-profile{
         margin: 0vw 1.5vw;
+        position: relative;
 
         .user-profile-picture{
             cursor: pointer;
@@ -213,13 +221,15 @@
         }
 
         .dropdown-content {
-            display: none;
             position: absolute;
-            left: 80vw;
+            left: -16vw;
             background-color: white;
             width: 18vw;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 2;
+            opacity: 0;
+            transition-duration: 0.3s;
+            visibility: hidden;
 
             .user-information{
                 text-align: center;
@@ -371,6 +381,7 @@
             li{
                 a{
                     text-align: center; 
+                    justify-content: center;
                     
                     span.icon{
                         margin: 0;
@@ -426,6 +437,8 @@
                 white-space: nowrap;
                 position: relative;
                 font-size: 14px;
+                display: flex;
+                align-items: center;
             }
 
             a.active{
@@ -538,17 +551,17 @@
   }
 
 .select-country {
-visibility: hidden;
-position: fixed; 
-z-index: 3;
-padding-top: 20vh;
-left: 0;
-top: 0;
-width: 100%; 
-height: 100%;
-background-color: rgb(0,0,0);
-background-color: rgba(0,0,0,0.4); 
-transition: ease;
+    visibility: hidden;
+    position: fixed; 
+    z-index: 3;
+    padding-top: 20vh;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+    transition: ease;
 
     .modal-content {
         background-color: #fefefe;
@@ -591,17 +604,73 @@ transition: ease;
     }
     
 }
+
+.signin-modal {
+    visibility: hidden;
+    position: fixed; 
+    z-index: 3;
+    padding-top: 20vh;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 5vh 2vw;
+        border: 1px solid #888;
+        width: 30%;
+        max-height: 70vh;
+        text-align: center;
+        border-radius: 5px;
+        
+
+        .title{
+            text-align: center;
+            padding-top: 3vh;
+
+            .top{
+                font-size: 24px;
+                margin-bottom: 1vh;
+            }
+
+            .bottom{
+                font-size: 14px;
+            }
+        }
+
+        .button-container{
+            margin-top: 5vh;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+
+            .button{
+                background-color: blueviolet;
+                color: white;
+                border-radius: 5px;
+                padding: 1vh 1vw;
+                cursor: pointer;
+            }
+        }
+    
+    }
+    
+}
   
-  .close {
+.close {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
+}
+
+.close:hover,
+.close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
-  }
+}
