--- a/Frontend/youRJube/src/app/channel-about/channel-about.component.scss
+++ b/Frontend/youRJube/src/app/channel-about/channel-about.component.scss
@@ -30,6 +30,37 @@
                 margin-bottom: 2vh;
             }
 
+            .links-container{
+                margin-top: 2vh;
+
+                .title{
+                    margin-bottom: 2vh;
+                }
+
+                .all-links{
+                    background-color: rgb(247, 242, 242);
+                    width: 65%;
+                    padding: 6px;
+                    border-radius: 5px;
+                    min-height: 100px;
+                    max-height: 100px;
+                    overflow-y: auto;
+
+                    ul{
+                        list-style: none;
+                        padding: 0;
+
+                        li{
+                            margin: 2vh 1vw;
+                            a{
+                                text-decoration: none;
+                                color: blue;
+                            }
+                        }
+                    }
+                }
+            }
+
         }
     }
 
