--- a/Frontend/youRJube/src/app/channel-community/channel-community-display/channel-community-display.component.scss
+++ b/Frontend/youRJube/src/app/channel-community/channel-community-display/channel-community-display.component.scss
@@ -16,10 +16,22 @@
         display: flex;
         flex-direction: column;
 
-        .name{
-            font-size: 15px;
-            font-weight: 500;
-            margin-bottom: 0.5vh;
+        .top{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+
+            .name{
+                font-size: 15px;
+                font-weight: 500;
+                margin-bottom: 0.5vh;
+            }
+
+            .date{
+                font-size: 12px;
+                color: gray;
+                margin-left: 0.5vw;
+            }
         }
 
         .image{
