--- a/Frontend/youRJube/src/app/channel-playlist/channel-playlist.component.scss
+++ b/Frontend/youRJube/src/app/channel-playlist/channel-playlist.component.scss
@@ -1,6 +1,5 @@
 .container{
-    padding-top: 2vh;
-    padding-left: 5vw;
+   a
 
     .top{
         color: gray;
@@ -16,6 +15,7 @@
         .playlists{
             display: flex;
             flex-direction: row;
+            flex-wrap: wrap;
         }
     }
 }
