--- a/Frontend/youRJube/src/app/channel-videos/channel-videos.component.scss
+++ b/Frontend/youRJube/src/app/channel-videos/channel-videos.component.scss
@@ -71,5 +71,9 @@
             flex-direction: row;
             flex-wrap: wrap;
         }
+        
+        .footer{
+            height: 50px;
+        }
     }
 }
