--- a/Frontend/youRJube/src/app/playlist/playlist.component.scss
+++ b/Frontend/youRJube/src/app/playlist/playlist.component.scss
@@ -92,6 +92,8 @@ $width: "350px";
                             font-weight: bolder;
                             cursor: pointer;
                         }
+
+                        
                     }
                 }
             }
@@ -213,14 +215,59 @@ $width: "350px";
 
         .bottom{
             padding-top: 2vh;
-            display: flex;
-            align-items: center;
-            font-weight: 500;
-            align-content: center;
-            font-size: 14px;
 
-            img{
-                margin-right: 0.5vw;
+            .channel-info{
+                display: flex;
+                flex-direction: row;
+
+                a{
+                    display: flex;
+                    align-items: center;
+                    font-size: 14px;
+                    font-weight: 500;
+                    text-decoration: none;
+                    color: black;
+                    
+                    img{
+                        margin-right: 0.5vw;
+                    }
+                }   
+
+            }
+
+            .subs-button{
+                display: flex;
+                justify-content: flex-end;
+                align-content: flex-end;
+                align-items: center;
+                margin-left: 2vw;
+
+                .subscribe-button{
+                    color: white;
+                    background-color: rgb(226, 5, 5);
+                    padding: 8px 16px;
+                    font-size: 14px;
+                    font-weight: bolder;
+                }
+
+                .subscribe-button2{
+                    color: gray;
+                    background-color: rgb(236, 225, 225);
+                    padding: 8px 16px;
+                    font-size: 14px;
+                    font-weight: bolder;
+                    margin-right: 1vw;
+                    cursor: pointer;
+                }
+
+                .bell-button{
+                    cursor: pointer;
+                }
+
+                i{
+                    color: gray;
+                    font-size: 24px;
+                }
             }
         }
     }
@@ -256,6 +303,7 @@ $width: "350px";
                 padding: 1vh 0;
                 opacity: 0;
                 transition-duration: 0.3s;
+                z-index: 3;
 
                 ul{
                     padding: 0;
@@ -272,6 +320,25 @@ $width: "350px";
                 }
             }
 
+        }
+
+        .center-video{
+            .videos{
+                padding-left: 1vw;
+                display: flex;
+                align-items: center;
+
+                i{
+                    font-size: 20px;
+                    text-align: center;
+                    color: gray;
+                    cursor: move;
+                }
+            }
+        }
+
+        .footer{
+            height: 50px;
         }
     }
 
@@ -338,3 +405,23 @@ $width: "350px";
         } 
     }
 }
+
+.cdk-drag-preview {
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+                0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  }
+  
+  .cdk-drag-placeholder {
+    opacity: 0;
+  }
+  
+  .cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
+
+  .center-video.cdk-drop-list-dragging .videos:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
