--- a/Frontend/youRJube/src/app/second-video-display/second-video-display.component.scss
+++ b/Frontend/youRJube/src/app/second-video-display/second-video-display.component.scss
@@ -5,6 +5,24 @@
     margin-left: 2vw;
     width: 100%;
 
+    .left{
+        a{
+            .thumbnail{
+                position: relative;
+    
+                .video-duration{
+                    position: absolute;
+                    right: 0px;
+                    bottom: 0px;
+                    color: white;
+                    background-color: black;
+                    padding: 3px;
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+
     .right{
         width: 50%;
         margin-left: 1vw;
@@ -71,7 +89,11 @@
             flex-direction: row;
 
             .channel{
-                font-size: 14px;
+                a{
+                    text-decoration: none;
+                    font-size: 14px;
+                    color: gray;
+                }
             }
 
             .view{
@@ -87,6 +109,19 @@
             margin-top: 1vh;
             color: gray;
             font-size: 13px;
+        }
+        
+        .premium-tag{
+            display: flex;
+
+            p{
+                font-size: 13px;
+                background-color: gray;
+                color: white;
+                border-radius: 3px;
+                padding: 5px;
+
+            }
         }
     }
 }
