--- a/Frontend/youRJube/src/app/video-display/video-display.component.scss
+++ b/Frontend/youRJube/src/app/video-display/video-display.component.scss
@@ -2,7 +2,7 @@ $container-width: 288px;
 
 .container{
     display: flex;
-    margin: 5vh 0.4vw;
+    margin: 4vh 0.4vw;
     flex-direction: column;
 
     a{
@@ -37,7 +37,7 @@ $container-width: 288px;
 
             .title{
                 font-weight: bold;
-                margin-bottom: 0.1vh;
+                margin-bottom: 1vh;
             }
 
             .channel-name{
@@ -53,6 +53,19 @@ $container-width: 288px;
                 font-size: smaller;
                 display: inline;
 
+            }
+
+            .premium-tag{
+                display: flex;
+
+                p{
+                    font-size: 13px;
+                    background-color: gray;
+                    color: white;
+                    border-radius: 3px;
+                    padding: 5px;
+
+                }
             }
         }
 
